--- a/Meu Site/blog.html
+++ b/Meu Site/blog.html
@@ -8,6 +8,7 @@
     <title>Blog - Guilherme Dantas</title>
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/bio.css">
+    <link rel="stylesheet" href="./blog.html">
     <link rel="icon" href="./imagens/biography-icon-18.jpg(1).png">
 </head>
 
@@ -20,27 +21,27 @@
         <article class="localização">
             <h1>Localização</h1>
             <p> Ifsp - Instituto Federal de Educação, Ciência e Tecnologia de São Paulo</p>
-            <iframe
+            <iframe class="maps"
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d98432.63825374348!2d-46.603169386255935!3d-23.53161838906383!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce58f2aecfc59f%3A0x5ea3920e4db7c14b!2sIFSP%20-%20Campus%20S%C3%A3o%20Paulo!5e0!3m2!1spt-BR!2sbr!4v1569785539338!5m2!1spt-BR!2sbr"
-                width="500" height="350" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+                width="90%" height="250" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </article>
         <article class="youtube">
             <h1>Youtube</h1>
             <p>Video retirado do Youtube</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/SFeA13_15-M" frameborder="0"
+            <iframe width="90%" height="315" src="https://www.youtube.com/embed/SFeA13_15-M" frameborder="0"
                 allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </article>
         <article class="video">
             <h1>Video</h1>
             <p>Video local - Solve a Rubiks Cube in 5 Seconds!</p>
-            <video src="./video/Solve a Rubiks Cube in 5 Seconds!.mp4" width="70%" height="70%" controls></video>
+            <video src="./video/Solve a Rubiks Cube in 5 Seconds!.mp4" width="90%" height="auto" controls></video>
         </article>
 
         <article class="audio">
             <h1>Audio</h1>
             <p>Audio local - half cocked - Strange Movies</p>
-            <audio src="./Audio/half_cocked_-_Strange_Movies.mp3" controls></audio>
+            <audio src="./Audio/half_cocked_-_Strange_Movies.mp3" width="90%" height="auto" controls></audio>
         </article>
     </main>
 
