--- a/ExerciciosJS/geradorDeFrases.html
+++ b/ExerciciosJS/geradorDeFrases.html
@@ -67,6 +67,13 @@
             border: 4px solid black;
             cursor: pointer;
         }
+
+        #botaoSorte{
+            color: white;
+            background-color: blue;
+            box-shadow: 2px black;
+            cursor: pointer;
+        }
     </style>
 
     <div id="modal-frase" class="modalcontainer">
